Add more detail for event 1

--- a/_events/2015-11-10.md
+++ b/_events/2015-11-10.md
@@ -6,4 +6,6 @@ venue:
   url: http://dukesbrewandque.com/
 ---
 
-This month we're going back to Duke's! It's been _ages_ since we last went, and I don't think any of us can resist their Mac & Cheese for much longer.
+MEATup is back, but with a different name! We're now less MEAT focused, and will be aiming to go and grab some food somewhere nice on the second Tuesday of each month.
+
+This month we're going back to Duke's – It's been _ages_ since we last went, and I don't think any of us can resist their Mac & Cheese for much longer.
